
  * checks/watch.{desc,pm}:
    + [BR] Fix the description of debian-watch-may-check-gpg-signature tag.
      Thanks to Gregor Herrmann for the bug report and patch
      (Closes: #732799).

  * checks/files.{desc.pm}:
    + [BR] Add xz and zip to duplicated-compressed-file regexp.
    + [BR] Use Lintian::Data for compressed file extension.

  * debian/control:
    + [NT] Add relevant relations on libyaml-perl, which is
      now used by harness.

  * reporting/harness:
    + [NT] Fix typo in --schedule-chunk-size command-line argument.
    + [NT] Require a new configuration variable $HARNESS_STATE_DIR.
      This variable tells harness where it can store state
      information and caches.
    + [NT] Track which version of lintian a given package group
      was processed by.  Using this information, harness will now
      slowly reprocess groups processed by an other version of
      Lintian than the current.

 -- Niels Thykier <niels@thykier.net>  Sat, 21 Dec 2013 10:44:43 +0100

lintian (2.5.20) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - build-depends-on-an-obsolete-java-package
      - debian-watch-file-pubkey-file-is-missing
      - debian-watch-may-check-gpg-signature
      - license-problem-nvidia-intellectual
      - maintainer-script-should-not-hide-init-failure
      - maintainer-script-should-not-modify-ld-so-conf
      - maintainer-script-should-not-modify-netbase-managed-file
      - maintainer-script-should-not-use-adduser-system-without-home
      - maintainer-script-should-not-use-ancient-dpkg-epoch-check
      - maintainer-script-should-not-use-ancient-dpkg-multi-conrep-check
      - maintainer-script-should-not-use-deprecated-chown-usage
      - maintainer-script-should-not-use-dpkg-status-directly
      - maintainer-script-should-not-use-fc-cache
      - maintainer-script-should-not-use-gconftool
      - maintainer-script-should-not-use-install-sgmlcatalog
      - maintainer-script-should-not-use-start-stop-daemon