@@ -1,0 +1,7 @@
+# vcs control files regex
+# ${COMPRESS_EXT} will be replaced by compression extension list
+# please alpha sort
+/\.arch-inventory(?:\.${COMPRESS_EXT})?\Z
+/\.hgtags(?:\.${COMPRESS_EXT})?\Z
+/\.(?:cvs|git|hg)ignore(?:\.${COMPRESS_EXT})?\Z
+/\.hg_archival\.txt(?:\.${COMPRESS_EXT})?\Z
